[gd_scene load_steps=23 format=3 uid="uid://kcgqgc54b1yc"]

[ext_resource type="Script" path="res://addons/qodot/src/nodes/qodot_map.gd" id="1_bhn0v"]
[ext_resource type="Resource" uid="uid://c36hv0o6g0udo" path="res://addons/qodot/game_definitions/fgd/qodot_fgd.tres" id="2_bji3j"]
[ext_resource type="Script" path="res://addons/qodot/src/nodes/qodot_entity.gd" id="3_0vjlo"]
[ext_resource type="Texture2D" uid="uid://dk0ej2fvjxlp7" path="res://textures/TEXTURES/CONCRETE_1A.PNG" id="4_0a3ik"]
[ext_resource type="Texture2D" uid="uid://bkwv58htj44nk" path="res://assets/hdris/redsky.png" id="5_htodk"]
[ext_resource type="Script" path="res://scripts/player.gd" id="6_8dytx"]
[ext_resource type="Shader" path="res://scripts/test.gdshader" id="7_d4wi3"]
[ext_resource type="PackedScene" uid="uid://p6w57yy3lu5d" path="res://scenes/card_doublejump.tscn" id="8_a6sgy"]
[ext_resource type="PackedScene" uid="uid://c2kbtvdp1kdjj" path="res://scenes/card_dash.tscn" id="9_rishu"]
[ext_resource type="PackedScene" uid="uid://cudqyxiii220g" path="res://scenes/card_lunge.tscn" id="10_l6i7f"]
[ext_resource type="PackedScene" uid="uid://bj8yvn4vc7kkb" path="res://scenes/card_sink.tscn" id="11_oki84"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_unmc3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7e521"]
albedo_texture = ExtResource("4_0a3ik")

[sub_resource type="ArrayMesh" id="ArrayMesh_skmd3"]
_surfaces = [{
"aabb": AABB(-28, -0.5, -29, 56, 1.00001, 58),
"attribute_data": PackedByteArray(0, 0, 32, 65, 0, 0, 128, 190, 0, 0, 32, 65, 0, 0, 128, 62, 0, 0, 144, 193, 0, 0, 128, 62, 0, 0, 144, 193, 0, 0, 128, 190, 0, 0, 80, 193, 0, 0, 128, 190, 0, 0, 128, 65, 0, 0, 128, 190, 0, 0, 128, 65, 0, 0, 128, 62, 0, 0, 80, 193, 0, 0, 128, 62, 0, 0, 80, 65, 0, 0, 144, 193, 0, 0, 80, 65, 0, 0, 32, 65, 0, 0, 128, 193, 0, 0, 32, 65, 0, 0, 128, 193, 0, 0, 144, 193, 0, 0, 80, 193, 0, 0, 144, 193, 0, 0, 128, 65, 0, 0, 144, 193, 0, 0, 128, 65, 0, 0, 32, 65, 0, 0, 80, 193, 0, 0, 32, 65, 0, 0, 80, 65, 0, 0, 128, 190, 0, 0, 80, 65, 0, 0, 128, 62, 0, 0, 128, 193, 0, 0, 128, 62, 0, 0, 128, 193, 0, 0, 128, 190, 0, 0, 32, 193, 0, 0, 128, 190, 0, 0, 144, 65, 0, 0, 128, 190, 0, 0, 144, 65, 0, 0, 128, 62, 0, 0, 32, 193, 0, 0, 128, 62),
"format": 34359742487,
"index_count": 36,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 0, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 4, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 8, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 12, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 16, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 20, 0, 22, 0, 23, 0),
"material": SubResource("StandardMaterial3D_7e521"),
"name": "TEXTURES/CONCRETE_1A",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 24,
"vertex_data": PackedByteArray(0, 0, 224, 193, 0, 0, 0, 63, 0, 0, 232, 193, 0, 0, 224, 193, 0, 0, 0, 191, 0, 0, 232, 193, 0, 0, 224, 65, 0, 0, 0, 191, 0, 0, 232, 193, 0, 0, 224, 65, 0, 0, 0, 63, 0, 0, 232, 193, 0, 0, 224, 193, 0, 0, 0, 63, 0, 0, 232, 193, 0, 0, 224, 193, 0, 0, 0, 63, 0, 0, 232, 65, 0, 0, 224, 193, 0, 0, 0, 191, 0, 0, 232, 65, 0, 0, 224, 193, 0, 0, 0, 191, 0, 0, 232, 193, 0, 0, 224, 65, 0, 0, 0, 191, 0, 0, 232, 193, 0, 0, 224, 193, 0, 0, 0, 191, 0, 0, 232, 193, 0, 0, 224, 193, 0, 0, 0, 191, 0, 0, 232, 65, 0, 0, 224, 65, 0, 0, 0, 191, 0, 0, 232, 65, 0, 0, 224, 65, 0, 0, 0, 63, 0, 0, 232, 193, 0, 0, 224, 65, 0, 0, 0, 63, 0, 0, 232, 65, 0, 0, 224, 193, 0, 0, 0, 63, 0, 0, 232, 65, 0, 0, 224, 193, 0, 0, 0, 63, 0, 0, 232, 193, 0, 0, 224, 65, 0, 0, 0, 63, 0, 0, 232, 193, 0, 0, 224, 65, 0, 0, 0, 191, 0, 0, 232, 193, 0, 0, 224, 65, 0, 0, 0, 191, 0, 0, 232, 65, 0, 0, 224, 65, 0, 0, 0, 63, 0, 0, 232, 65, 0, 0, 224, 193, 0, 0, 0, 63, 0, 0, 232, 65, 0, 0, 224, 65, 0, 0, 0, 63, 0, 0, 232, 65, 0, 0, 224, 65, 0, 0, 0, 191, 0, 0, 232, 65, 0, 0, 224, 193, 0, 0, 0, 191, 0, 0, 232, 65, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 0, 0, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 0, 0, 255, 127, 255, 127, 255, 191, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 127, 255, 255, 255, 127, 255, 191, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 255, 255, 127, 255, 255, 255, 255, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191, 255, 127, 255, 127, 255, 255, 255, 191)
}]

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_0j0ui"]
data = PackedVector3Array(-28, 0.5, -29, -28, -0.5, -29, 28, -0.5, -29, -28, 0.5, -29, 28, -0.5, -29, 28, 0.5, -29, -28, 0.5, -29, -28, 0.5, 29, -28, -0.5, 29, -28, 0.5, -29, -28, -0.5, 29, -28, -0.5, -29, 28, -0.5, -29, -28, -0.5, -29, -28, -0.5, 29, 28, -0.5, -29, -28, -0.5, 29, 28, -0.5, 29, 28, 0.5, -29, 28, 0.5, 29, -28, 0.5, 29, 28, 0.5, -29, -28, 0.5, 29, -28, 0.5, -29, 28, 0.5, -29, 28, -0.5, -29, 28, -0.5, 29, 28, 0.5, -29, 28, -0.5, 29, 28, 0.5, 29, -28, 0.5, 29, 28, 0.5, 29, 28, -0.5, 29, -28, 0.5, 29, 28, -0.5, 29, -28, -0.5, 29)

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_jtkpc"]
panorama = ExtResource("5_htodk")

[sub_resource type="Sky" id="Sky_yob0e"]
sky_material = SubResource("PanoramaSkyMaterial_jtkpc")

[sub_resource type="Environment" id="Environment_lgo74"]
background_mode = 2
sky = SubResource("Sky_yob0e")
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
tonemap_mode = 2
glow_enabled = true
fog_density = 0.036
fog_sky_affect = 0.0
volumetric_fog_density = 0.0028
volumetric_fog_albedo = Color(0.286275, 0.0235294, 0.0705882, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ijx2c"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ya1lh"]
height = 1.2

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gux66"]
render_priority = 0
shader = ExtResource("7_d4wi3")

[sub_resource type="QuadMesh" id="QuadMesh_pxs0y"]
material = SubResource("ShaderMaterial_gux66")
size = Vector2(10, 10)
orientation = 1

[node name="world" type="Node3D"]

[node name="QodotMap" type="Node3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, -1.4554, 15.797)
script = ExtResource("1_bhn0v")
map_file = "/Users/stastigay/Documents/Code Folder/Godot Files/godot_prototype_project/godot_game_dev/FPS Controller prototype/maps/testing_map.map"
inverse_scale_factor = 32.0
entity_fgd = ExtResource("2_bji3j")
texture_file_extensions = PackedStringArray("png", "jpg", "jpeg", "bmp", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "")
default_material = SubResource("StandardMaterial3D_unmc3")

[node name="entity_0_worldspawn" type="Node3D" parent="QodotMap"]
script = ExtResource("3_0vjlo")
properties = {
"_tb_textures": "textures;textures/Art;textures/Art/Materials;textures/Books;textures/Books/Materials;textures/Boxes;textures/Boxes/Materials;textures/Bricks;textures/Bricks/Materials;textures/Buildings;textures/Buildings/Materials;textures/Concrete;textures/Concrete/Materials;textures/Doors;textures/Doors/Materials;textures/Electrical;textures/Electrical/Materials;textures/Floor;textures/Floor/Materials;textures/Food;textures/Food/Materials;textures/Gems;textures/Gems/Materials;textures/Ground;textures/Ground/Materials;textures/Industrial;textures/Industrial/Materials;textures/Metal;textures/Metal/Materials;textures/Misc;textures/Misc/Colors;textures/Misc/Materials;textures/Nature;textures/Nature/Materials;textures/Panels;textures/Panels/Materials;textures/Papers;textures/Papers/Materials;textures/Products;textures/Products/Materials;textures/Road;textures/Road/Materials;textures/Rocks;textures/Rocks/Materials;textures/Roof;textures/Roof/Materials;textures/Shelves;textures/Shelves/Materials;textures/Signs;textures/Signs/Materials;textures/TEXTURES;textures/Tiles;textures/Tiles/Materials;textures/Tools;textures/Tools/Materials;textures/Units;textures/Units/Materials;textures/Vehicles;textures/Vehicles/Materials;textures/Walls;textures/Walls/Materials;textures/Water;textures/Windows;textures/Windows/Materials;textures/Wood;textures/Wood/Materials;textures/card_icons",
"classname": "worldspawn",
"mapversion": "220"
}

[node name="entity_0_mesh_instance" type="MeshInstance3D" parent="QodotMap/entity_0_worldspawn"]
cast_shadow = 2
gi_mode = 0
mesh = SubResource("ArrayMesh_skmd3")

[node name="StaticBody3D" type="StaticBody3D" parent="QodotMap/entity_0_worldspawn/entity_0_mesh_instance"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="QodotMap/entity_0_worldspawn/entity_0_mesh_instance/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_0j0ui")

[node name="env" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="env"]
environment = SubResource("Environment_lgo74")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="env"]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Area3D" parent="." instance=ExtResource("8_a6sgy")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 1.98412, 2.41533, 13.3956)

[node name="Area3D2" parent="." instance=ExtResource("9_rishu")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 0.567353, 0.886223, -8.95367)

[node name="Area3D3" parent="." instance=ExtResource("10_l6i7f")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 5.41767, 0.889738, -8.89865)

[node name="Area3D4" parent="." instance=ExtResource("11_oki84")]
transform = Transform3D(-0.999963, 0, 0.00860426, 0, 1, 0, -0.00860426, 0, -0.999963, 3.33649, 2.83381, -8.43574)

[node name="Area3D5" parent="." instance=ExtResource("9_rishu")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 1.94792, 5.72647, -25.6298)

[node name="Area3D6" parent="." instance=ExtResource("8_a6sgy")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 1.74884, 6.25409, -39.1264)

[node name="player" type="CharacterBody3D" parent="."]
script = ExtResource("6_8dytx")
metadata/player = true

[node name="standing_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1, 2.08165e-12)
shape = SubResource("CapsuleShape3D_ijx2c")

[node name="crouching_collision_shape" type="CollisionShape3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 0.6, 2.08165e-12)
shape = SubResource("CapsuleShape3D_ya1lh")
disabled = true

[node name="RayCast3D" type="RayCast3D" parent="player"]
target_position = Vector3(2.08165e-12, 2, 2.08165e-12)

[node name="dash_timer" type="Timer" parent="player"]
one_shot = true

[node name="lunge_timer" type="Timer" parent="player"]

[node name="neck" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 1.8, 2.08165e-12)

[node name="head" type="Node3D" parent="player/neck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="Camera3D" type="Camera3D" parent="player/neck/head"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="player/neck/head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.0421373, -0.999112, 0, 0.999112, 0.0421373, 0, 0, -1.28837)
mesh = SubResource("QuadMesh_pxs0y")

[connection signal="timeout" from="player/dash_timer" to="player" method="_dash_end"]
[connection signal="timeout" from="player/lunge_timer" to="player" method="_on_lunge_timer_timeout"]
